# telegram_files_server

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  pyproject.toml
.github/workflows/: build_docker_image.yml  codeql-analysis.yml  linters.yaml  rust-clippy.yml
docker/: production.dockerfile
fastapi_file_server/app/: models.py  on_start.py  serializers.py  views.py
fastapi_file_server/app/alembic/: env.py
fastapi_file_server/app/alembic/versions/: 3bbf7cb4eaa2_.py  5a32159504fd_.py
fastapi_file_server/app/services/: file_downloader.py  file_uploader.py  storages.py
fastapi_file_server/core/: app.py  auth.py  config.py
scripts/: env.sh  start.sh  start_production.sh
src/: config.rs  main.rs
src/core/: bot.rs  errors.rs  file_utils.rs  mod.rs  views.rs
tests/: test_fastapi_file_server.py
