[package]
name = "telegram_files_server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.219"
serde_json = "1.0.140"

axum = { version = "0.8.1", features = ["multipart"] }
axum_typed_multipart = "0.15.1"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"]}
tower-http = { version = "0.6.2", features = ["trace"] }
sentry-tracing = "0.36.0"

tokio = { version = "1.44.1", features = [ "full" ] }
tokio-util = { version = "0.7.14", features = [ "full" ] }
axum-prometheus = "0.8.0"

futures = "0.3.31"

once_cell = "1.21.1"
teloxide = { git = "https://github.com/teloxide/teloxide.git" }

sentry = "0.36.0"

dotenvy = "0.15.7"

reqwest = { version = "0.12.15", features = [
    "json",
    "stream",
    "multipart",
], default-features = false }
moka = { version = "0.12.10", features = ["future"] }
