[package]
name = "telegram_files_server"
version = "0.1.0"
edition = "2021"


[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = 'abort'

[profile.profiling]
inherits = "release"
debug = true
strip = false


[dependencies]
serde = "1.0.219"
serde_json = "1.0.140"

axum = { version = "0.8.1", features = ["multipart"] }
axum_typed_multipart = "0.16.3"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"]}
tower-http = { version = "0.6.2", features = ["trace"] }
sentry-tracing = "0.42.0"

tokio = { version = "1.44.2", features = [ "full" ] }
tokio-util = { version = "0.7.14", features = [ "full" ] }
axum-prometheus = "0.9.0"

futures = "0.3.31"

once_cell = "1.21.1"
teloxide = "0.17.0"

sentry = "0.42.0"

dotenvy = "0.15.7"

reqwest = { version = "0.12.15", features = [
    "json",
    "stream",
    "multipart",
], default-features = false }
moka = { version = "0.12.10", features = ["future"] }
