[tool.poetry]
name = "fastapi_file_server"
version = "0.1.0"
description = ""
authors = ["Kurbanov Bulat <kurbanovbul@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = {extras = ["standart"], version = "^0.15.0"}
ormar = "^0.10.19"
alembic = "^1.7.3"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
asyncpg = "^0.24.0"
psycopg2 = "^2.9.1"
python-multipart = "^0.0.5"
telegram-files-storage = {extras = ["all"], version = "^1.1.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
